--- a/src/index.html
+++ b/src/index.html
@@ -71,7 +71,7 @@
 
 <body>
 	<!-- Preloader -->
-	<div class="site-preloader-wrap">
+	<!--<div class="site-preloader-wrap">
 		<div class="cf-loader">
 			<div class="loading-spinner"></div>
 			<div class="go-rounder"></div>
@@ -79,7 +79,7 @@
 			<div class="loader-text">
 			</div>
 		</div>
-	</div>
+	</div>-->
 	<!-- End Preloader -->
 	<app-root></app-root>
 
@@ -126,8 +126,6 @@
     <script src="assets/dashboard/plugins/bootstrap/js/bootstrap.min.js"></script>
     <!-- slimscrollbar scrollbar JavaScript -->
     <script src="assets/dashboard/js/perfect-scrollbar.jquery.min.js"></script>
-    <!--Wave Effects -->
-    <script src="assets/dashboard/js/waves.js"></script>
     <!--Menu sidebar -->
     <script src="assets/dashboard/js/sidebarmenu.js"></script>
     <!--Custom JavaScript -->
