--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,11 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Aleksandar Kojic</title>
+	<title>iVeterinar</title>
 	<base href="/">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="icon" type="image/x-icon" href="favicon.ico">
+	<link rel="icon" type="image/x-icon" href="./assets/images/favicon.png">
 
 
 	<meta charset="UTF-8">
