--- a/src/index.html
+++ b/src/index.html
@@ -130,6 +130,7 @@
     <script src="assets/dashboard/js/sidebarmenu.js"></script>
     <!--Custom JavaScript -->
     <script src="assets/dashboard/js/custom.min.js"></script>
+    <script src="assets/dashboard/js/waves.js"></script>
     <!-- ============================================================== -->
     <!-- This page plugins -->
     <!-- ============================================================== -->
