chat and login and signup add route

--- a/src/index.html
+++ b/src/index.html
@@ -52,19 +52,19 @@
 	<link rel="stylesheet" type="text/css" href="assets/login/vendor/select2/select2.min.css">
 	<!--===============================================================================================-->
 
-    <link href="assets/dashboard/plugins/perfect-scrollbar/perfect-scrollbar.css" type="text/css" rel="stylesheet">
-    <!-- This page CSS -->
-    <!-- chartist CSS -->
-    <link href="assets/dashboard/plugins/chartist-js/chartist.min.css" type="text/css" rel="stylesheet">
-    <link href="assets/dashboard/plugins/chartist-plugin-tooltip-master/dist/chartist-plugin-tooltip.css" type="text/css" rel="stylesheet">
-    <!--c3 CSS -->
-    <link href="assets/dashboard/plugins/c3-master/c3.min.css" type="text/css" rel="stylesheet">
-    <!-- Custom CSS -->
-    <link href="assets/dashboard/css/style.css" type="text/css" rel="stylesheet">
-    <!-- Dashboard 1 Page CSS -->
-    <link href="assets/dashboard/css/pages/dashboard3.css" type="text/css" rel="stylesheet">
-    <!-- You can change the theme colors from here -->
-    <link href="assets/dashboard/css/colors/default-dark.css" type="text/css"  rel="stylesheet">
+	<link href="assets/dashboard/plugins/perfect-scrollbar/perfect-scrollbar.css" type="text/css" rel="stylesheet">
+	<!-- This page CSS -->
+	<!-- chartist CSS -->
+	<link href="assets/dashboard/plugins/chartist-js/chartist.min.css" type="text/css" rel="stylesheet">
+	<link href="assets/dashboard/plugins/chartist-plugin-tooltip-master/dist/chartist-plugin-tooltip.css" type="text/css" rel="stylesheet">
+	<!--c3 CSS -->
+	<link href="assets/dashboard/plugins/c3-master/c3.min.css" type="text/css" rel="stylesheet">
+	<!-- Custom CSS -->
+	<link href="assets/dashboard/css/style.css" type="text/css" rel="stylesheet">
+	<!-- Dashboard 1 Page CSS -->
+	<link href="assets/dashboard/css/pages/dashboard3.css" type="text/css" rel="stylesheet">
+	<!-- You can change the theme colors from here -->
+	<link href="assets/dashboard/css/colors/default-dark.css" type="text/css" rel="stylesheet">
 
 </head>
 
@@ -121,33 +121,51 @@
 
 	<!--====================================-->
 
-    <!-- Bootstrap popper Core JavaScript -->
-    <script src="assets/dashboard/plugins/bootstrap/js/popper.min.js"></script>
-    <script src="assets/dashboard/plugins/bootstrap/js/bootstrap.min.js"></script>
-    <!-- slimscrollbar scrollbar JavaScript -->
-    <script src="assets/dashboard/js/perfect-scrollbar.jquery.min.js"></script>
-    <!--Menu sidebar -->
-    <script src="assets/dashboard/js/sidebarmenu.js"></script>
-    <!--Custom JavaScript -->
-    <script src="assets/dashboard/js/custom.min.js"></script>
-    <script src="assets/dashboard/js/waves.js"></script>
-    <!-- ============================================================== -->
-    <!-- This page plugins -->
-    <!-- ============================================================== -->
-    <!--sparkline JavaScript -->
-    <script src="assets/dashboard/plugins/sparkline/jquery.sparkline.min.js"></script>
-    <!--morris JavaScript -->
-    <script src="assets/dashboard/plugins/chartist-js/chartist.min.js"></script>
-    <!--<script src="assets/dashboard/plugins/chartist-plugin-tooltip-master/dist/chartist-plugin-tooltip.min.js"></script>-->
-    <!--c3 JavaScript -->
-    <script src="assets/dashboard/plugins/d3/d3.min.js"></script>
-    <script src="assets/dashboard/plugins/c3-master/c3.min.js"></script>
-    <!-- Chart JS -->
-    <script src="assets/dashboard/js/dashboard3.js"></script>
-    <!-- ============================================================== -->
-    <!-- Style switcher -->
-    <!-- ============================================================== -->
-    <script src="assets/dashboard/plugins/styleswitcher/jQuery.style.switcher.js"></script>
+	<!-- Bootstrap popper Core JavaScript -->
+	<script src="assets/dashboard/plugins/bootstrap/js/popper.min.js"></script>
+	<script src="assets/dashboard/plugins/bootstrap/js/bootstrap.min.js"></script>
+	<!-- slimscrollbar scrollbar JavaScript -->
+	<script src="assets/dashboard/js/perfect-scrollbar.jquery.min.js"></script>
+	<!--Menu sidebar -->
+	<script src="assets/dashboard/js/sidebarmenu.js"></script>
+	<!--Custom JavaScript -->
+	<script src="assets/dashboard/js/custom.min.js"></script>
+	<script src="assets/dashboard/js/waves.js"></script>
+	<!-- ============================================================== -->
+	<!-- This page plugins -->
+	<!-- ============================================================== -->
+	<!--sparkline JavaScript -->
+	<script src="assets/dashboard/plugins/sparkline/jquery.sparkline.min.js"></script>
+	<!--morris JavaScript -->
+	<script src="assets/dashboard/plugins/chartist-js/chartist.min.js"></script>
+	<!--<script src="assets/dashboard/plugins/chartist-plugin-tooltip-master/dist/chartist-plugin-tooltip.min.js"></script>-->
+	<!--c3 JavaScript -->
+	<script src="assets/dashboard/plugins/d3/d3.min.js"></script>
+	<script src="assets/dashboard/plugins/c3-master/c3.min.js"></script>
+	<!-- Chart JS -->
+	<script src="assets/dashboard/js/dashboard3.js"></script>
+	<!-- ============================================================== -->
+	<!-- Style switcher -->
+	<!-- ============================================================== -->
+	<script src="assets/dashboard/plugins/styleswitcher/jQuery.style.switcher.js"></script>
+
+	<!--Start of Tawk.to Script-->
+	<script type="text/javascript">
+		var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+		(function () {
+			var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
+			s1.async = true;
+			s1.src = 'https://embed.tawk.to/5ae78fc1227d3d7edc24da05/default';
+			s1.charset = 'UTF-8';
+			s1.setAttribute('crossorigin', '*');
+			s0.parentNode.insertBefore(s1, s0);
+		})();
+	</script>
+	<!--End of Tawk.to Script-->
+
+	<script>
+		// setTimeout(function(){ console.log($('#innerWrapper div').length) }, 8000);
+	</script>
 
 </body>
 
